--- a/PracticalTest/web/WEB-INF/web.xml
+++ b/PracticalTest/web/WEB-INF/web.xml
@@ -20,6 +20,14 @@
         <servlet-name>SearchServlet</servlet-name>
         <servlet-class>sonpc.servlet.SearchServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>InsertServlet</servlet-name>
+        <servlet-class>sonpc.servlet.InsertServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>InsertachiveServlet</servlet-name>
+        <servlet-class>sonpc.servlet.InsertachiveServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/LoginServlet</url-pattern>
@@ -31,6 +39,14 @@
     <servlet-mapping>
         <servlet-name>SearchServlet</servlet-name>
         <url-pattern>/SearchServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>InsertServlet</servlet-name>
+        <url-pattern>/InsertServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>InsertachiveServlet</servlet-name>
+        <url-pattern>/InsertachiveServlet</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
